[gd_scene load_steps=29 format=3 uid="uid://bjlrmuipf5wl8"]

[ext_resource type="Script" path="res://main.gd" id="1_3yg4r"]
[ext_resource type="Texture2D" uid="uid://kdfijmcgmxyo" path="res://textures/map/backgroundv2.png" id="1_odqe0"]
[ext_resource type="Texture2D" uid="uid://r7a3a6fa7u2g" path="res://textures/map/fence.png" id="2_5jyih"]
[ext_resource type="PackedScene" uid="uid://dmfjbcjfvqgxk" path="res://player.tscn" id="3_qqgpg"]
[ext_resource type="Script" path="res://selling area.gd" id="3_w3vsa"]
[ext_resource type="Texture2D" uid="uid://ces0bnietgv4j" path="res://textures/map/stall.png" id="4_kstgh"]
[ext_resource type="Script" path="res://Timer2.gd" id="4_o8xel"]
[ext_resource type="Script" path="res://themes/progress bar.gd" id="4_v2uj4"]
[ext_resource type="Script" path="res://RichTextLabel.gd" id="7_hwqv0"]
[ext_resource type="Script" path="res://stall.gd" id="8_kwlc7"]
[ext_resource type="PackedScene" uid="uid://cenuwuoo38wfx" path="res://themes/progress bar.tscn" id="9_qx4lv"]
[ext_resource type="PackedScene" uid="uid://d3ftb68i4kh7c" path="res://scenes/menus/upgrade_shop.tscn" id="11_cqtmq"]
[ext_resource type="Script" path="res://garden.gd" id="11_igw16"]
[ext_resource type="Texture2D" uid="uid://cfmtlffl6h6cl" path="res://textures/map/shop.png" id="11_k22wg"]
[ext_resource type="Script" path="res://Shop.gd" id="11_m8lk0"]
[ext_resource type="Script" path="res://retrun timer.gd" id="13_b13of"]
[ext_resource type="PackedScene" uid="uid://4ujbkofogtg1" path="res://scenes/shopper.tscn" id="13_m23kr"]
[ext_resource type="Script" path="res://scenes/shopper.gd" id="14_gveph"]
[ext_resource type="Script" path="res://retrun timer2.gd" id="14_wphje"]
[ext_resource type="Script" path="res://beginTrip.gd" id="15_0rmks"]
[ext_resource type="Script" path="res://shoppingTimer.gd" id="15_i3mp8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i7m8p"]
size = Vector2(85, 89.25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bl17m"]
size = Vector2(112, 211)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ororb"]
size = Vector2(106, 219.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vu7an"]
size = Vector2(1000, 160)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7kovp"]
size = Vector2(36, 165.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q3s0w"]
size = Vector2(505, 27.75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_01rxp"]
size = Vector2(25.75, 59.75)

[node name="Node" type="Node" groups=["save_group"]]
script = ExtResource("1_3yg4r")

[node name="background" type="TextureRect" parent="."]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_odqe0")
expand_mode = 1

[node name="stall" type="StaticBody2D" parent="background" groups=["save_group"]]
script = ExtResource("8_kwlc7")

[node name="stall texture" type="TextureRect" parent="background/stall"]
offset_left = 497.0
offset_top = 411.0
offset_right = 714.0
offset_bottom = 646.0
texture = ExtResource("4_kstgh")

[node name="power up area" type="CollisionShape2D" parent="background/stall"]
position = Vector2(600, 541.625)
shape = SubResource("RectangleShape2D_i7m8p")
disabled = true

[node name="stall hitBox" type="CollisionShape2D" parent="background/stall"]
position = Vector2(602, 541)
shape = SubResource("RectangleShape2D_bl17m")

[node name="selling area" type="Area2D" parent="background/stall"]
script = ExtResource("3_w3vsa")

[node name="CollisionShape2D" type="CollisionShape2D" parent="background/stall/selling area"]
position = Vector2(555, 523.75)
shape = SubResource("RectangleShape2D_ororb")

[node name="garden" type="StaticBody2D" parent="background" groups=["save_group"]]
script = ExtResource("11_igw16")

[node name="CollisionShape2D" type="CollisionShape2D" parent="background/garden"]
position = Vector2(595, 180)
shape = SubResource("RectangleShape2D_vu7an")
disabled = true

[node name="Timer2" type="Timer" parent="background/garden"]
wait_time = 2.0
autostart = true
script = ExtResource("4_o8xel")

[node name="Shop" type="Area2D" parent="background"]
script = ExtResource("11_m8lk0")

[node name="TextureRect" type="TextureRect" parent="background/Shop"]
offset_left = -15.0
offset_top = 337.0
offset_right = 601.0
offset_bottom = 1597.0
scale = Vector2(0.25, 0.25)
texture = ExtResource("11_k22wg")

[node name="seller selling area" type="CollisionShape2D" parent="background/Shop"]
position = Vector2(114, 568.75)
shape = SubResource("RectangleShape2D_7kovp")

[node name="Upgrade Shop" parent="background/Shop" instance=ExtResource("11_cqtmq")]

[node name="seller hitbox" type="StaticBody2D" parent="background/Shop"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="background/Shop/seller hitbox"]
polygon = PackedVector2Array(110, 442, 81, 436, 58, 395, 23, 390, -10, 410, -13, 671, 107, 668)

[node name="player" parent="background" groups=["save_group"] instance=ExtResource("3_qqgpg")]
position = Vector2(150, 150)
scale = Vector2(4, 4)

[node name="RichTextLabel" type="RichTextLabel" parent="background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.017
anchor_top = 0.031
anchor_right = 0.017
anchor_bottom = 0.031
offset_left = -11.584
offset_top = -13.088
offset_right = 448.416
offset_bottom = 24.912
pivot_offset = Vector2(627, -220)
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/normal_font_size = 25
text = "
"
script = ExtResource("7_hwqv0")

[node name="progress bar" parent="background" groups=["save_group"] instance=ExtResource("9_qx4lv")]
layout_mode = 1
offset_left = 776.0
offset_top = -19.0
offset_right = 703.0
offset_bottom = -501.0
script = ExtResource("4_v2uj4")

[node name="fence" type="StaticBody2D" parent="background"]

[node name="fenceHitBox" type="CollisionShape2D" parent="background/fence"]
position = Vector2(911.5, 442.125)
shape = SubResource("RectangleShape2D_q3s0w")

[node name="fence1" type="TextureRect" parent="background/fence"]
offset_left = 856.0
offset_top = 314.0
offset_right = 1195.0
offset_bottom = 495.0
texture = ExtResource("2_5jyih")
expand_mode = 1

[node name="fance2" type="TextureRect" parent="background/fence"]
offset_left = 610.0
offset_top = 315.0
offset_right = 976.0
offset_bottom = 491.0
texture = ExtResource("2_5jyih")
expand_mode = 1

[node name="shoppingNPC" parent="background" groups=["save_group"] instance=ExtResource("13_m23kr")]
position = Vector2(1241, 561)
scale = Vector2(4, 4)
script = ExtResource("14_gveph")

[node name="pick up area" type="CollisionShape2D" parent="background/shoppingNPC"]
position = Vector2(-171.125, -6.375)
shape = SubResource("RectangleShape2D_01rxp")
disabled = true

[node name="stallMark" type="Marker2D" parent="background/shoppingNPC"]
position = Vector2(-138.25, -2.25)
gizmo_extents = 5.0

[node name="backMark" type="Marker2D" parent="background/shoppingNPC"]

[node name="beginTrip" type="Timer" parent="background/shoppingNPC"]
wait_time = 6.0
one_shot = true
autostart = true
script = ExtResource("15_0rmks")

[node name="shoppingTimer" type="Timer" parent="background/shoppingNPC"]
one_shot = true
script = ExtResource("15_i3mp8")

[node name="drop_off_buy_flowers" type="Timer" parent="background/shoppingNPC"]
one_shot = true
script = ExtResource("13_b13of")

[node name="retrun timer" type="Timer" parent="background/shoppingNPC"]
one_shot = true
script = ExtResource("14_wphje")

[node name="saver" type="Timer" parent="."]
wait_time = 60.0
autostart = true

[connection signal="body_entered" from="background/stall/selling area" to="background/stall/selling area" method="_on_body_entered"]
[connection signal="body_exited" from="background/stall/selling area" to="background/stall/selling area" method="_on_body_exited"]
[connection signal="script_changed" from="background/garden/Timer2" to="background/garden/Timer2" method="_on_script_changed"]
[connection signal="timeout" from="background/garden/Timer2" to="background/garden/Timer2" method="_on_timeout"]
[connection signal="body_entered" from="background/Shop" to="background/Shop" method="_on_body_entered"]
[connection signal="body_exited" from="background/Shop" to="background/Shop" method="_on_body_exited"]
[connection signal="timeout" from="background/shoppingNPC/beginTrip" to="background/shoppingNPC/beginTrip" method="_on_timeout"]
[connection signal="timeout" from="background/shoppingNPC/shoppingTimer" to="background/shoppingNPC/shoppingTimer" method="_on_timeout"]
[connection signal="timeout" from="background/shoppingNPC/drop_off_buy_flowers" to="background/shoppingNPC/drop_off_buy_flowers" method="_on_timeout"]
[connection signal="timeout" from="background/shoppingNPC/retrun timer" to="background/shoppingNPC/retrun timer" method="_on_timeout"]
[connection signal="timeout" from="saver" to="." method="_on_saver_timeout"]
